--- a/hw5_preprocessing.ipynb
+++ b/hw5_preprocessing.ipynb
@@ -212,7 +212,7 @@
     "if dataset == \"1k\":\n",
     "    input_path = \"s3://10605-f25-hw5-subset-1000/*.parquet\"\n",
     "\n",
-    "if dataset == \"10k\":\n",
+    "elif dataset == \"10k\":\n",
     "    input_path = \"s3://10605-f25-hw5-subset-10000/*.parquet\"\n",
     "    \n",
     "else:\n",
@@ -346,9 +346,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
+   "display_name": "10605",
    "language": "python",
-   "name": "pysparkkernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -357,8 +357,9 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "pyspark",
-   "pygments_lexer": "python3"
+   "name": "python",
+   "pygments_lexer": "python3",
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
