added code for working with bytestring

--- a/hw5_preprocessing.ipynb
+++ b/hw5_preprocessing.ipynb
@@ -78,13 +78,13 @@
     "def minhash_numpy(s):\n",
     "    \"\"\"Calculate MinHash signature for a set.\"\"\"\n",
     "    signature = np.full(N, np.iinfo(np.uint64).max, dtype=np.uint64)\n",
-    "    \n",
+    "\n",
     "    for val in s:\n",
     "        val_int = hash(val) % PRIME if not isinstance(val, (int, np.integer)) else val\n",
     "        val_np = np.uint64(val_int)\n",
     "        current_hashes = (A_COEFFS * val_np + B_COEFFS) % PRIME_NP\n",
     "        signature = np.minimum(signature, current_hashes)\n",
-    "    \n",
+    "\n",
     "    return signature.tolist()\n",
     "\n",
     "\n",
@@ -100,6 +100,10 @@
     "    \"\"\"Extract text from HTML, removing scripts and styles.\"\"\"\n",
     "    if not html:\n",
     "        return None\n",
+    "\n",
+    "    if isinstance(html, (bytearray, bytes)):\n",
+    "        html = html.decode('utf-8', errors='ignore')\n",
+    "\n",
     "    soup = BeautifulSoup(html, 'lxml')\n",
     "    for script in soup([\"script\", \"style\"]):\n",
     "        script.extract()\n",
@@ -114,6 +118,10 @@
     "    \"\"\"Convert HTML to plain text for UDF.\"\"\"\n",
     "    if not html_content:\n",
     "        return \"\"\n",
+    "\n",
+    "    if isinstance(html_content, (bytearray, bytes)):\n",
+    "        html_content = html_content.decode('utf-8', errors='ignore')\n",
+    "\n",
     "    try:\n",
     "        soup = BeautifulSoup(html_content, 'html.parser')\n",
     "        return soup.get_text(strip=True)\n",
@@ -125,10 +133,10 @@
     "    \"\"\"Tokenize text using GPT-2 tokenizer.\"\"\"\n",
     "    enc = tiktoken.get_encoding(\"gpt2\")\n",
     "    eot = enc._special_tokens['<|endoftext|>']\n",
-    "    \n",
+    "\n",
     "    if not text:\n",
     "        return [eot]\n",
-    "    \n",
+    "\n",
     "    try:\n",
     "        tokens = [eot]\n",
     "        tokens.extend(enc.encode_ordinary(text))\n",
@@ -137,7 +145,7 @@
     "        return tokens_np.astype(int).tolist()\n",
     "    except Exception as e:\n",
     "        print(f\"Error tokenizing: {e}\")\n",
-    "        return [eot]\n"
+    "        return [eot]"
    ]
   },
   {
